--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-Flask==2.3.3
-flask-cors==4.0.0
-numpy==1.24.3
-pandas==2.0.3
-scikit-learn==1.3.0
-lightgbm==4.0.0
-xgboost==1.7.6
-joblib==1.3.2
-gunicorn==21.2.0
-pyarrow==13.0.0
-streamlit==1.28.0
+Flask>=3.0.0
+flask-cors>=4.0.0
+numpy>=1.26.0,<2.0.0
+pandas>=2.1.0,<3.0.0
+scikit-learn>=1.3.0
+lightgbm>=4.1.0
+xgboost>=2.0.0
+joblib>=1.3.0
+streamlit>=1.32.0
